Fixes in routes
