# swagger.yml
@@ -23,7 +23,7 @@ paths:
                   example: admin
                 pwd:
                   type: string
-                  example: '123'
+                  example: "123"
               required:
                 - user_name
                 - pwd
@@ -38,8 +38,11 @@ paths:
       tags:
         - User
       security:
-        - JWT: [eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6OSwidXNlcl9uYW1lIjoiYWRtaW4iLCJlbWFpbCI6Im1hcmxpZXJhbWlyZXphQGdtYWlsLmNvbSIsInRva2VuIjoiJDJiJDEwJE5aWnNxc1ZPSlA2Zzh5Q0hqM1BmNC5ZQW5mdElUNHFWeUpEd29IaEhKRW8vNDljekpoY25tIiwiY3JlYXRlZF9hdCI6IjIwMjUtMDMtMTVUMDY6MDA6MDAuMDAwWiIsInJvbGUiOiJhZG1pbiIsImVzdGFkbyI6ImFjdGl2ZSIsImlhdCI6MTc0MzA0MzUxNX0.kuxHJzRxR3q8Q8TZ_r4tg-8GJv23HG7WIvCtY_rpYsA]
-      
+        - JWT:
+            [
+              eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6OSwidXNlcl9uYW1lIjoiYWRtaW4iLCJlbWFpbCI6Im1hcmxpZXJhbWlyZXphQGdtYWlsLmNvbSIsInRva2VuIjoiJDJiJDEwJE5aWnNxc1ZPSlA2Zzh5Q0hqM1BmNC5ZQW5mdElUNHFWeUpEd29IaEhKRW8vNDljekpoY25tIiwiY3JlYXRlZF9hdCI6IjIwMjUtMDMtMTVUMDY6MDA6MDAuMDAwWiIsInJvbGUiOiJhZG1pbiIsImVzdGFkbyI6ImFjdGl2ZSIsImlhdCI6MTc0MzA0MzUxNX0.kuxHJzRxR3q8Q8TZ_r4tg-8GJv23HG7WIvCtY_rpYsA,
+            ]
+
       responses:
         "200":
           description: OK
@@ -70,12 +73,12 @@ paths:
       responses:
         "200":
           description: OK
-  
+
   /admin/cinema:
     post:
       security:
-        - JWT: [] 
-      
+        - JWT: []
+
       summary: Crear los cines y horarios para la pelicula
       tags:
         - Cinema - Admin
@@ -107,7 +110,7 @@ paths:
         "200":
           description: OK
         "401":
-          description: Acceso denegado      
+          description: Acceso denegado
   /admin/cinema/{id}:
     put:
       parameters:
@@ -175,7 +178,7 @@ paths:
         "200":
           description: OK
         "401":
-          description: Acceso denegado      
+          description: Acceso denegado
   /admin/user/{id}:
     delete:
       parameters:
@@ -195,7 +198,7 @@ paths:
           description: OK
         "401":
           description: Acceso denegado
-  
+
   /cinema:
     get:
       summary: Obtener todas las salas a futuro
@@ -206,8 +209,22 @@ paths:
           description: OK
         "400":
           description: Bad Request
+  /cinema/{id}:
+    get:
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      summary: Obtener datos de sala
+      tags:
+        - Cinema
+      responses:
+        "200":
+          description: OK
   /schedule:
-    get: 
+    get:
       summary: Obtener todas las funciones de una sala
       tags:
         - Cinema
@@ -230,13 +247,10 @@ paths:
           schema:
             type: string
           required: true
-
-      security:
-        - JWT: []
       summary: Obtener la disponibilidad de una funcion
       tags:
         - Cinema
-      
+
       responses:
         "200":
           description: OK
@@ -246,8 +260,8 @@ paths:
           description: Acceso denegado
     post:
       security:
-        - JWT: [] 
-      
+        - JWT: []
+
       summary: Relaizar reserva
       tags:
         - Cinema
@@ -279,10 +293,10 @@ paths:
         "200":
           description: OK
         "401":
-          description: Acceso denegado 
+          description: Acceso denegado
         "400":
           description: Bad request
-  
+
 components:
   securitySchemes:
     JWT:
